fix overflow problem

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,4 +1,7 @@
 // Initial screen (max-width: 320px)
+html{
+    // scroll-behavior: smooth;
+}
 body {
   background: rgb(20, 29, 38);
   * {
@@ -41,21 +44,21 @@ header {
   margin-inline: auto;
 
   .img1 {
-    // padding: 2rem;
+    padding: -30rem;
     background: rgba(255, 255, 255, 0.7);
     height: 16rem;
     width: 16rem;
     margin-top: 2rem;
     margin-bottom: .5rem;
     border-radius: 10rem;
-    border: 5px solid rgb(2, 13, 22);
+    border: 7px solid rgb(2, 13, 22);
     // overflow-x: hidden;
 
 
     img {
-      height: 19rem;
-      width: 19rem;
-      margin: 1.5rem 0 0 1.8rem;
+      height: 18rem;
+      width: 11.1rem;
+      margin: 2.4rem 0 0 1.9rem;
       border-bottom-left-radius: 8rem;
     }
   }
